yet to figure out checkbox checked

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div data-role="footer" data-position="fixed">
                   <form>
                        <input type="text" name="item" id="item" placeholder="new item"/>
-                    <input type="button" data-icon="plus" data-iconpos="left" name="btnAdd" id="btnAdd" value="Add" />
+                    <input type="button" data-icon="plus" data-iconpos="left" name="btnAdd" id="btnAdd" value="Add to list" />
                   </form>
 
                 </div>
