added custom css and and meta tag html change

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <meta name="viewport" content="initial-scale=1, width=device-width" />
         <title>grocery-gere0018</title>
         <!-- my css from the theme i created -->
     <link rel="stylesheet" href="themes/grocery-gere0018.min.css" />
@@ -32,6 +31,7 @@
     <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
     <!-- jqm structure css -->
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile.structure-1.4.3.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/custom.css" />
 
     <!-- jquery files -->
    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
