--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
 
             <div data-role="footer" data-position="fixed">
-                  <form>
+                  <form id='form'>
                        <input type="text" name="item" id="item" placeholder="new item"/>
                     <input type="button" data-icon="plus" data-iconpos="left" name="btnAdd" id="btnAdd" value="Add to list" />
                   </form>
