changed app name and h3

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
        <div data-role="page" id="home">
               <div data-role="header">
-                <h1>My Groceries</h1>
+                <h1>pickMe</h1>
               </div>
                 <div data-role="content">
-                    <h3>I need these groceries:</h3>
+                    <h3>Items I need:</h3>
 
                      <ol data-role="listview" id="listView">
 
