finalised functianality and changed look and jqm themes

--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="initial-scale=1, width=device-width" />
         <title>grocery-gere0018</title>
-        <!-- my css from the theme i created -->
-    <link rel="stylesheet" href="themes/grocery-gere0018.min.css" />
+        <link href='http://fonts.googleapis.com/css?family=Flamenco|Handlee' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="themes/shopping.min.css" />
     <!-- css for icons -->
     <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css"/>
     <!-- jqm structure css -->
@@ -41,10 +40,10 @@
 
        <div data-role="page" id="home">
               <div data-role="header">
-                <h1>pickMe</h1>
+                <h1>PickMe</h1>
               </div>
                 <div data-role="content">
-                    <h3>Items I need:</h3>
+
 
                      <ol data-role="listview" id="listView">
 
