corrected design to display best on samsung S5

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
                 <div data-role="content">
 
 
-                     <ol data-role="listview" id="listView">
+                     <ul data-role="listview" id="listView">
 
-                    </ol>
+                    </ul>
 
                 </div>
 
             <div data-role="footer" data-position="fixed">
                   <form id='form'>
                        <input type="text" name="item" id="item" placeholder="new item"/>
-                    <input type="button" data-icon="plus" data-iconpos="left" name="btnAdd" id="btnAdd" value="Add to list" />
+                    <input type="button" data-icon="plus" data-iconpos="left" name="btnAdd" id="btnAdd" value="Add" />
                   </form>
 
                 </div>
